--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm -w packages/express-backend run dev\" \"npm -w packages/react-frontend run dev\"",
+    "frontend": "npm -w packages/react-frontend run dev",
+    "backend":"npm -w packages/express-backend run dev",
+    "macdev": "concurrently \"npm -w packages/express-backend run dev\" \"npm -w packages/react-frontend run dev\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
