--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "frontend": "npm -w packages/react-frontend run dev",
-    "backend":"npm -w packages/express-backend run dev",
+    "backend": "npm -w packages/express-backend run dev",
     "macdev": "concurrently \"npm -w packages/express-backend run dev\" \"npm -w packages/react-frontend run dev\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "jest": "^1.0.0"
   }
 }
